# m5stack-avatar-rs

./: Cargo.toml  README.md
examples/: mock.rs
src/: animation.rs  avatar.rs  component.rs  components.rs  expression.rs  lib.rs  palette.rs  sprite.rs  util.rs
src/components/: balloon.rs  effect.rs  eye.rs  eyeblow.rs  face.rs  mouth.rs
