[package]
name = "m5stack-avatar-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.7.1"
embedded-graphics-simulator = { version = "0.4.1", optional = true }
num_enum = "0.6.0"
rand_core = "0.6.4"
rand_xorshift = "0.3.0"
variant_count = "1.1.0"

[features]
default = []
std = ["embedded-graphics-simulator"]

[[example]]
name = "mock"
required-features = ["std"]
