[package]
name = "m5stack-avatar-rs"
version = "0.1.0"
edition = "2021"
authors = ["Kenta Ida <fuga@fugafuga.org>"]
repository = "https://github.com/ciniml/m5stack-avatar-rs"
license = "MIT OR Apache-2.0"
description = "Rust implementation of M5Stack Avatar"

[dependencies]
embedded-graphics = "0.8.1"
embedded-graphics-simulator = { version = "0.4.1", optional = true }
micromath = "2.0.0"
num_enum = { version = "0.6.0", default-features = false, features = [] }
rand_core = "0.6.4"
rand_xorshift = "0.3.0"
variant_count = "1.1.0"

[features]
default = []
std = ["embedded-graphics-simulator"]

[[example]]
name = "mock"
required-features = ["std"]
